--- a/src/app/pages/user-profil/user-profil.component.html
+++ b/src/app/pages/user-profil/user-profil.component.html
@@ -6,97 +6,95 @@
       <div class="col-xl-8">
         <div class="card">
           <div class="card-body pt-3">
+            <div class="d-none d-md-block">
+
             <ul class="nav nav-tabs nav-tabs-bordered">
-              <li class="nav-item"> <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#profile-overview">Aperçu</button></li>
-              <li class="nav-item"> <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-edit">Modifier le profil</button></li>
-              <li class="nav-item"> <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-change-password">Changer le mot de passe</button></li>
+              <li class="nav-item">
+                <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#profile-overview">
+                  <i class="bi bi-person-circle"></i> Aperçu
+                </button>
+              </li>
+              <li class="nav-item">
+                <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-edit">
+                  <i class="bi bi-pencil-square"></i> Modifier le profil
+                </button>
+              </li>
+              <li class="nav-item">
+                <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-change-password">
+                  <i class="bi bi-key"></i> Changer le mot de passe
+                </button>
+              </li>
             </ul>
+            </div>
+          <div class="d-block d-md-none">
+            <ul class="nav nav-tabs nav-tabs-bordered">
+              <li class="nav-item">
+                <button class="nav-link active" data-bs-toggle="tab" data-bs-target="#profile-overview">
+                  <i class="bi bi-person-circle"></i>
+                </button>
+              </li>
+              <li class="nav-item">
+                <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-edit">
+                  <i class="bi bi-pencil-square"></i>
+                </button>
+              </li>
+              <li class="nav-item">
+                <button class="nav-link" data-bs-toggle="tab" data-bs-target="#profile-change-password">
+                  <i class="bi bi-key"></i> 
+                </button>
+              </li>
+            </ul>
+          </div>
+
+
             <div class="tab-content pt-2">
               <div class="tab-pane fade show active profile-overview" id="profile-overview">
                 <h5 class="card-title">Détails du profil</h5>
                 <div class="row">
                   <div class="col-lg-3 col-md-4 label ">Nom et prénom</div>
-                  <div class="col-lg-9 col-md-8">Jassa</div>
+                  <div class="col-lg-9 col-md-8">{{userDto.firstname}} {{userDto.lastname}}</div>
                 </div>
                 <div class="row">
-                  <div class="col-lg-3 col-md-4 label">Company</div>
-                  <div class="col-lg-9 col-md-8">Therichpost</div>
+                  <div class="col-lg-3 col-md-4 label">Mobile</div>
+                  <div class="col-lg-9 col-md-8">{{userDto.mobile}}</div>
                 </div>
                 <div class="row">
-                  <div class="col-lg-3 col-md-4 label">Job</div>
-                  <div class="col-lg-9 col-md-8">Web Designer</div>
+                  <div class="col-lg-3 col-md-4 label">Téléphone</div>
+                  <div class="col-lg-9 col-md-8">{{userDto.tel}}</div>
                 </div>
                 <div class="row">
-                  <div class="col-lg-3 col-md-4 label">Country</div>
-                  <div class="col-lg-9 col-md-8">USA</div>
-                </div>
-                <div class="row">
-                  <div class="col-lg-3 col-md-4 label">Address</div>
-                  <div class="col-lg-9 col-md-8">Ludhiana, Punjab, India</div>
-                </div>
-                <div class="row">
-                  <div class="col-lg-3 col-md-4 label">Phone</div>
-                  <div class="col-lg-9 col-md-8">(436) 486-3538 x29071</div>
+                  <div class="col-lg-3 col-md-4 label">Fax</div>
+                  <div class="col-lg-9 col-md-8">{{userDto.fax}}</div>
                 </div>
               </div>
               <div class="tab-pane fade profile-edit pt-3" id="profile-edit">
+                <div *ngIf="successMessage" class="alert alert-success">La modification a été effectuée avec succès.</div>
                 <form>
                   <div class="row mb-3">
-                    <label for="profileImage" class="col-md-4 col-lg-3 col-form-label">Profile Image</label>
-                    <div class="col-md-8 col-lg-9">
-                      <img src="assets/img/profile-img.jpg" alt="Profile">
-                      <div class="pt-2"> <a href="#" class="btn btn-primary btn-sm" title="Upload new profile image"><i class="bi bi-upload"></i></a> <a href="#" class="btn btn-danger btn-sm" title="Remove my profile image"><i class="bi bi-trash"></i></a></div>
-                    </div>
+                    <label for="fullName" class="col-md-4 col-lg-3 col-form-label">Nom</label>
+                    <div class="col-md-8 col-lg-9"> <input name="fullName" type="text" class="form-control" id="fullName" [(ngModel)]="userDto.firstname"></div>
                   </div>
                   <div class="row mb-3">
-                    <label for="fullName" class="col-md-4 col-lg-3 col-form-label">Full Name</label>
-                    <div class="col-md-8 col-lg-9"> <input name="fullName" type="text" class="form-control" id="fullName" value="Jassa"></div>
+                    <label for="fullName" class="col-md-4 col-lg-3 col-form-label">Prenom</label>
+                    <div class="col-md-8 col-lg-9"> <input name="lastName" type="text" class="form-control" id="lastName" [(ngModel)]="userDto.lastname"></div>
                   </div>
                   <div class="row mb-3">
-                    <label for="about" class="col-md-4 col-lg-3 col-form-label">About</label>
-                    <div class="col-md-8 col-lg-9"><textarea name="about" class="form-control" id="about" style="height: 100px">Sunt est soluta temporibus accusantium neque nam maiores cumque temporibus. Tempora libero non est unde veniam est qui dolor. Ut sunt iure rerum quae quisquam autem eveniet perspiciatis odit. Fuga sequi sed ea saepe at unde.</textarea></div>
+                    <label for="Phone" class="col-md-4 col-lg-3 col-form-label">Téléphone</label>
+                    <div class="col-md-8 col-lg-9"> <input name="phone" type="text" class="form-control" id="Phone" [(ngModel)]="userDto.tel"></div>
                   </div>
                   <div class="row mb-3">
-                    <label for="company" class="col-md-4 col-lg-3 col-form-label">Company</label>
-                    <div class="col-md-8 col-lg-9"> <input name="company" type="text" class="form-control" id="company" value="Therichpost"></div>
+                    <label for="fax" class="col-md-4 col-lg-3 col-form-label">Fax</label>
+                    <div class="col-md-8 col-lg-9"> <input name="fax" type="text" class="form-control" id="fax" [(ngModel)]="userDto.fax"></div>
                   </div>
                   <div class="row mb-3">
-                    <label for="Job" class="col-md-4 col-lg-3 col-form-label">Job</label>
-                    <div class="col-md-8 col-lg-9"> <input name="job" type="text" class="form-control" id="Job" value="Web Designer"></div>
+                    <label for="mobile" class="col-md-4 col-lg-3 col-form-label">Mobile</label>
+                    <div class="col-md-8 col-lg-9"> <input name="mobile" type="text" class="form-control" id="mobile" [(ngModel)]="userDto.mobile"></div>
                   </div>
                   <div class="row mb-3">
-                    <label for="Country" class="col-md-4 col-lg-3 col-form-label">Country</label>
-                    <div class="col-md-8 col-lg-9"> <input name="country" type="text" class="form-control" id="Country" value="USA"></div>
+                    <label for="email" class="col-md-4 col-lg-3 col-form-label">Email</label>
+                    <div class="col-md-8 col-lg-9"> <input name="email" type="text" class="form-control" id="email" [(ngModel)]="userDto.email"></div>
                   </div>
-                  <div class="row mb-3">
-                    <label for="Address" class="col-md-4 col-lg-3 col-form-label">Address</label>
-                    <div class="col-md-8 col-lg-9"> <input name="address" type="text" class="form-control" id="Address" value="Ludhiana, Punjab, India"></div>
-                  </div>
-                  <div class="row mb-3">
-                    <label for="Phone" class="col-md-4 col-lg-3 col-form-label">Phone</label>
-                    <div class="col-md-8 col-lg-9"> <input name="phone" type="text" class="form-control" id="Phone" value="(436) 486-3538 x29071"></div>
-                  </div>
-                  <div class="row mb-3">
-                    <label for="Email" class="col-md-4 col-lg-3 col-form-label">Email</label>
-                    <div class="col-md-8 col-lg-9"> <input name="email" type="email" class="form-control" id="Email" value="k.anderson@example.com"></div>
-                  </div>
-                  <div class="row mb-3">
-                    <label for="Twitter" class="col-md-4 col-lg-3 col-form-label">Twitter Profile</label>
-                    <div class="col-md-8 col-lg-9"> <input name="twitter" type="text" class="form-control" id="Twitter" value="https://twitter.com/#"></div>
-                  </div>
-                  <div class="row mb-3">
-                    <label for="Facebook" class="col-md-4 col-lg-3 col-form-label">Facebook Profile</label>
-                    <div class="col-md-8 col-lg-9"> <input name="facebook" type="text" class="form-control" id="Facebook" value="https://facebook.com/#"></div>
-                  </div>
-                  <div class="row mb-3">
-                    <label for="Instagram" class="col-md-4 col-lg-3 col-form-label">Instagram Profile</label>
-                    <div class="col-md-8 col-lg-9"> <input name="instagram" type="text" class="form-control" id="Instagram" value="https://instagram.com/#"></div>
-                  </div>
-                  <div class="row mb-3">
-                    <label for="Linkedin" class="col-md-4 col-lg-3 col-form-label">Linkedin Profile</label>
-                    <div class="col-md-8 col-lg-9"> <input name="linkedin" type="text" class="form-control" id="Linkedin" value="https://linkedin.com/#"></div>
-                  </div>
-                  <div class="text-center"> <button type="submit" class="btn btn-primary">Save Changes</button></div>
+                  <div class="text-center"> <button type="submit" class="btn btn-primary" (click)="modifier()">Modifier</button></div>
                 </form>
               </div>
               <div class="tab-pane fade pt-3" id="profile-change-password">
