--- a/src/app/pages/setting/setting.component.html
+++ b/src/app/pages/setting/setting.component.html
@@ -34,5 +34,16 @@
       <input type="text" class="form-control" id="numeroFactures"  name="numFacture" [(ngModel)]="numFacture" placeholder="Numéro des factures">
       <button type="submit" class="btn btn-info mt-2" (click)="updateNumFacture()">Modifier numero facture</button>
     </div>
+    <div class="form-group mb-3">
+      <div class="alert alert-success alert-dismissible fade show" role="alert" *ngIf="alertNumDevisSuccess">
+        La modification de la numero devis a été effectuée avec succès.
+      </div>
+      <div class="alert alert-danger alert-dismissible fade show" role="alert" *ngIf="alertNumDevisError">
+        Une erreur s'est produite lors de la modification de la numero devis.
+      </div>
+      <label for="numeroFactures">Numéro des devis</label>
+      <input type="text" class="form-control" id="numDevis"  name="numDevis" [(ngModel)]="numDevis" placeholder="Numéro des factures">
+      <button type="submit" class="btn btn-warning mt-2" (click)="updateNumDevis()">Modifier numero facture</button>
+    </div>
   </form>
 </div>
