--- a/src/app/pages/facture/ajouter-facture/ajouter-facture.component.html
+++ b/src/app/pages/facture/ajouter-facture/ajouter-facture.component.html
@@ -12,6 +12,7 @@
         <div class="mb-3">
           <label>Sélectionnez une client</label>
           <select
+            ng-disabled="isDropdownDisabled"
             class="form-control"
             id="client"
             name="client"
@@ -53,44 +54,41 @@
         <div class="card-body">
           <div class="">
             <div class="col mb-2">
-              <input type="text" class="form-control"
-                     placeholder="Code Produit"
-                     [(ngModel)]="codeProduit"
-                     (input)="search()"
-              >
-              <div *ngIf="codeProduit.length && produitSelectedYet == true" class="card p-2">
-                <p class="cursor-pointer"
-                   *ngFor="let p of listProduitFiltrer"
-                   (click)="selectPrdotui(p)"
-                >{{p.code}}</p>
+              <div class="input-group">
+                <input class="form-control" autocomplete="off" list="datalistOptions" id="exampleDataList" name="codeP" (change)="afficher()" [(ngModel)]="codeProduit" placeholder="Recherche par code">
+                <datalist id="datalistOptions">
+                  <option *ngFor="let p of listProduit" [value]="p.code">{{p.code}}</option>
+                </datalist>
               </div>
             </div>
             <span class="text-danger" *ngIf="errorProduit == true">Veuillez choisir un produit</span>
-            <div class="col mb-2">
-              <input type="text" class="form-control"
-                     placeholder="Quantité"
-                     [(ngModel)]="quantite"
-              >
+            <span *ngIf="clientErreur" class="text-danger">
+              Veuillez choisir un client avant d'ajouter un produit.
+            </span>
+            <div class="text-danger col-md-12" *ngIf="searchErreur">
+              Le produit n'a pas été trouvé.
+            </div>
+            <div class="mb-2">
+              <div class="input-group">
+                <input type="number" class="form-control" placeholder="Quantité" [(ngModel)]="quantite">
+                <span class="input-group-text">produits</span>
+              </div>
             </div>
             <span class="text-danger" *ngIf="errorQnt == true">La quantité doit être supérieure à zéro.</span>
             <div class="col mb-2 mb-2">
-              <input type="text" class="form-control"
-                     placeholder="Prix Unitaire"
-                     [(ngModel)]="prixUtitaire"
-
-              >
+              <div class="input-group">
+                <input type="number" class="form-control" placeholder="Prix Unitaire" [(ngModel)]="prixUtitaire">
+                <span class="input-group-text">TND</span>
+              </div>
             </div>
             <div class="col mb-2">
-              <input  type="text" class="form-control"
-                     placeholder="Remise"
-                     [(ngModel)]="remise"
-
-              >
+              <div class="input-group">
+                <input type="number" class="form-control" placeholder="Remise" [(ngModel)]="remise">
+                <span class="input-group-text">%</span>
+              </div>
             </div>
             <div class="col mb-2">
-              <span *ngIf="searchProduit.etatRemise == true" >Prix Totale : {{ quantite !== 0 ? ((searchProduit.prix! * quantite)-((searchProduit.prix! * quantite)*(remise!/100)) | number:'1.3-3'): (searchProduit.prix! * 1)-((searchProduit.prix! * quantite)*(client.remise!/100)) | number:'1.3-3' }}</span>
-              <span *ngIf="searchProduit.etatRemise == false" >Prix Totale : {{ (quantite !== 0 ? searchProduit.prix! * quantite:0) | number:'1.3-3' }}</span>
-
+              <span>{{ ((prixUtitaire * quantite) - ((prixUtitaire * quantite * remise) / 100) | number: '1.3-3')  }} TND</span>
             </div>
             <div class="col mb-2">
               <button class="btn btn-success" (click)="ajouterProduitFacture()"><i class="bi bi-plus-circle-fill"></i></button>
