--- a/src/app/pages/facture/modifierFacture/modifier-facture/modifier-facture.component.html
+++ b/src/app/pages/facture/modifierFacture/modifier-facture/modifier-facture.component.html
@@ -18,7 +18,7 @@
               <div class="col-md-12">
                 <div class="col-md-5">
                   <div class="input-group">
-                    <input class="form-control" list="datalistOptions" id="exampleDataList" name="codeP" (change)="afficher()" [(ngModel)]="codeP" placeholder="Recherche par code">
+                    <input class="form-control" list="datalistOptions" autocomplete="off" id="exampleDataList" name="codeP" (change)="afficher()" [(ngModel)]="codeP" placeholder="Recherche par code">
                     <datalist id="datalistOptions">
                       <option *ngFor="let p of listProduit" [value]="p.code">{{p.code}}</option>
                     </datalist>
